--- a/.github/workflows/LinuxQuickBuild.yml
+++ b/.github/workflows/LinuxQuickBuild.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [ "release" ]
-        use_cxx: [ "clang++", "g++" ]
+        use_cxx: [ "clang++-15" ]
 
     steps:
       - uses: actions/checkout@v4
@@ -24,3 +24,4 @@ jobs:
         run: |
           cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
           cmake --build build/${{ matrix.build_type }} --parallel
+          ctest --test-dir build/${{ matrix.build_type }}
