--- a/.github/workflows/MacFullBuild.yml
+++ b/.github/workflows/MacFullBuild.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler_version: [ "14" ]
+        # compiler_version: [ "14" ]
         build_type: [ "release", "debug" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
@@ -22,7 +22,7 @@ jobs:
       - name: Building FuzzyLite
         working-directory: fuzzylite
         env:
-          CXX: clang++-${{ matrix.compiler_version }}
+          CXX: clang++
         run: |
           cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
           cmake --build build/${{ matrix.build_type }} --parallel
