--- a/.github/workflows/MacMediumBuild.yml
+++ b/.github/workflows/MacMediumBuild.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [ "release", "debug" ]
-        use_cxx: [ "clang++-14", "g++-13" ]
+        use_cxx: [ "clang++", "g++-13" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
 
