--- a/.github/workflows/MacQuickBuild.yml
+++ b/.github/workflows/MacQuickBuild.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [ "release" ]
-        use_cxx: [ "clang++", "g++-13" ]
+        use_cxx: [ "clang++" ]
 
     steps:
       - uses: actions/checkout@v4
