Specific build patterns in branches

--- a/.github/workflows/LinuxFullBuild.yml
+++ b/.github/workflows/LinuxFullBuild.yml
@@ -2,7 +2,7 @@ name: Linux Full Build
 
 on:
   push:
-    branches: [ "build/*" ]
+    branches: [ "build/*", "build-linux/*" ]
 
 jobs:
   build-clang:
