--- a/.github/workflows/MacFullBuild.yml
+++ b/.github/workflows/MacFullBuild.yml
@@ -1,17 +1,16 @@
-name: Linux Full Build
+name: macOS Full Build
 
 on:
   push:
-    branches: [ "build/*", "build-linux/*" ]
+    branches: [ "build/*", "build-mac/*" ]
 
 jobs:
   build-clang:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
 
     strategy:
       fail-fast: false
       matrix:
-        compiler_version: [ "13", "14", "15"]
         build_type: [ "release", "debug" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
@@ -22,7 +21,7 @@ jobs:
       - name: Building FuzzyLite
         working-directory: fuzzylite
         env:
-          CXX: clang++-${{ matrix.compiler_version }}
+          CXX: clang++
         run: |
           cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
           cmake --build build/${{ matrix.build_type }} --parallel
@@ -34,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        compiler_version: [ "9", "10", "11", "12", "13" ]
+        compiler_version: [ "11", "12", "13" ]
         build_type: [ "release" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
