--- a/.github/workflows/MacMediumBuild.yml
+++ b/.github/workflows/MacMediumBuild.yml
@@ -12,7 +12,6 @@ jobs:
       fail-fast: false
       matrix:
         build_type: [ "release", "debug" ]
-        use_cxx: [ "clang++", "g++-13" ]
         use_cpp98: [ "OFF", "ON" ]
         use_float: [ "OFF", "ON" ]
 
@@ -21,9 +20,7 @@ jobs:
 
       - name: Building FuzzyLite
         working-directory: fuzzylite
-        env:
-          CXX: ${{ matrix.use_cxx }}
         run: |
-          cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
+          cmake -B build/${{ matrix.build_type }} -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
           cmake --build build/${{ matrix.build_type }} --parallel
           ctest --test-dir build/${{ matrix.build_type }}
