--- a/.github/workflows/MacQuickBuild.yml
+++ b/.github/workflows/MacQuickBuild.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            build/${{ matrix.build_type }}/_deps
+            fuzzylite/build/${{ matrix.build_type }}/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
@@ -36,6 +36,6 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: |
-            build/${{ matrix.build_type }}/_deps
+            fuzzylite/build/${{ matrix.build_type }}/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
     
