--- a/.github/workflows/WindowsQuickBuild.yml
+++ b/.github/workflows/WindowsQuickBuild.yml
@@ -36,6 +36,7 @@ jobs:
           ctest --test-dir build/${{ matrix.build_type }}
 
       - name: Save cmake dependencies
+        if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
         id: cache-save-cmake-deps
         uses: actions/cache/save@v4
         with:
