--- a/.github/workflows/MacFullBuild.yml
+++ b/.github/workflows/MacFullBuild.yml
@@ -5,6 +5,34 @@ on:
     branches: [ "build/*", "build-mac/*" ]
 
 jobs:
+  build-xcode:
+    runs-on: macos-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        build_type: [ "release", "debug" ]
+        use_cpp98: [ "OFF", "ON" ]
+        use_float: [ "OFF", "ON" ]
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Restore cmake dependencies
+        id: cache-restore-cmake-deps
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            fuzzylite/build/${{ matrix.build_type }}/_deps
+          key: ${{ runner.os }}-cmake-deps
+
+      - name: Building FuzzyLite
+        working-directory: fuzzylite
+        run: |
+          cmake -B build/${{ matrix.build_type }} -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
+          cmake --build build/${{ matrix.build_type }} --parallel
+          ctest --test-dir build/${{ matrix.build_type }}
+
   build-clang:
     runs-on: macos-latest
 
@@ -18,10 +46,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Restore cmake dependencies
+        id: cache-restore-cmake-deps
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            fuzzylite/build/${{ matrix.build_type }}/_deps
+          key: ${{ runner.os }}-cmake-deps
+
       - name: Building FuzzyLite
         working-directory: fuzzylite
-        env:
-          CXX: clang++
         run: |
           cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
           cmake --build build/${{ matrix.build_type }} --parallel
@@ -40,6 +74,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Restore cmake dependencies
+        id: cache-restore-cmake-deps
+        uses: actions/cache/restore@v4
+        with:
+          path: |
+            fuzzylite/build/${{ matrix.build_type }}/_deps
+          key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
         working-directory: fuzzylite
