--- a/.github/workflows/LinuxFullBuild.yml
+++ b/.github/workflows/LinuxFullBuild.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            fuzzylite/build/${{ matrix.build_type }}/_deps
+            fuzzylite/build/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
@@ -32,9 +32,9 @@ jobs:
         env:
           CXX: clang++-${{ matrix.compiler_version }}
         run: |
-          cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/${{ matrix.build_type }} --parallel
-          ctest --test-dir build/${{ matrix.build_type }}
+          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
+          cmake --build build/ --parallel
+          ctest --test-dir build/
 
   build-gcc:
     runs-on: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            fuzzylite/build/${{ matrix.build_type }}/_deps
+            fuzzylite/build/_deps
           key: ${{ runner.os }}-cmake-deps
           
       - name: Building FuzzyLite
@@ -63,6 +63,6 @@ jobs:
         env:
           CXX: g++-${{ matrix.compiler_version }}
         run: |
-          cmake -B build/${{ matrix.build_type }} -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
-          cmake --build build/${{ matrix.build_type }} --parallel
-          ctest --test-dir build/${{ matrix.build_type }}
+          cmake -B build/ -G"Unix Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DFL_CPP98=${{ matrix.use_cpp98 }} -DFL_USE_FLOAT=${{ matrix.use_float }} .
+          cmake --build build/ --parallel
+          ctest --test-dir build/
