--- a/.github/workflows/MacQuickBuild.yml
+++ b/.github/workflows/MacQuickBuild.yml
@@ -21,15 +21,15 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            fuzzylite/build/${{ matrix.build_type }}/_deps
+            fuzzylite/build/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
         working-directory: fuzzylite
         run: |
-          cmake -B build/${{ matrix.build_type }} -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
-          cmake --build build/${{ matrix.build_type }} --parallel
-          ctest --test-dir build/${{ matrix.build_type }}
+          cmake -B build/ -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
+          cmake --build build/ --parallel
+          ctest --test-dir build/
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
@@ -37,6 +37,6 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: |
-            fuzzylite/build/${{ matrix.build_type }}/_deps
+            fuzzylite/build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
     
