--- a/.github/workflows/MacQuickBuild.yml
+++ b/.github/workflows/MacQuickBuild.yml
@@ -21,11 +21,10 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            fuzzylite/build/_deps
+            build/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
-        working-directory: fuzzylite
         run: |
           cmake -B build/ -G"Xcode" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
           cmake --build build/ --parallel
@@ -37,6 +36,5 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: |
-            fuzzylite/build/_deps
+            build/_deps
           key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
-    
