--- a/.github/workflows/WindowsMediumBuild.yml
+++ b/.github/workflows/WindowsMediumBuild.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - uses: ilammy/msvc-dev-cmd@v1
 
       - name: Restore cmake dependencies
@@ -24,11 +24,10 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: |
-            fuzzylite/build/_deps
+            build/_deps
           key: ${{ runner.os }}-cmake-deps
 
       - name: Building FuzzyLite
-        working-directory: fuzzylite
         shell: cmd
         run: |
           cmake -B build/ -G"NMake Makefiles" -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} .
